--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: nuget restore
       
       - name: Build .Net7
-        run: msbuild /t:AssetStudioGUI:publish /p:Configuration=Release /p:TargetFramework=net7.0-windows /p:SelfContained=false /verbosity:minimal
+        run: msbuild /t:AssetStudioGUI:publish /p:Configuration=Release /p:Platform=x64 /p:TargetFramework=net7.0-windows /p:SelfContained=false /verbosity:minimal
 
       - name: Upload .Net7 Artifact
         uses: actions/upload-artifact@v2
